--- a/ui/node.html
+++ b/ui/node.html
@@ -146,6 +146,7 @@
           <div class="col">
             <button class="btn btn-primary" @click="onLoadData">{{ view === 'chain' ? 'Load Blockchain' : 'Load Transactions' }}</button>
             <button v-if="view === 'chain' && wallet" class="btn btn-success" @click="onMine">Mine Coins</button>
+            <button class="btn btn-warning" @click="onResolve">Resolve Conflicts</button>
           </div>
         </div>
         <div class="row">
@@ -323,6 +324,19 @@
                 vm.success = res.data.message;
                 console.log(res.data)
                 vm.funds = res.data.funds
+              })
+              .catch(function (error) {
+                vm.success = null;
+                vm.error = error.response.data.message;
+              })
+            },
+          onResolve: function () {
+            const vm = this;
+            axios
+              .post('/resolve-conflicts')
+              .then(function (res) {
+                vm.error = null;
+                vm.success = res.data.message;
               })
               .catch(function (error) {
                 vm.success = null;
